# LearnOpenGL

./: CMakeLists.txt  glad.c  main.cpp
include/: shader.h
include/glad/: glad.h
shaders/: shader.frag
